--- a/buecher.html
+++ b/buecher.html
@@ -190,7 +190,7 @@
 	<!-- Veröffentlichungen -->
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vero">
     <h3 class="w3-left-align">Veröffentlichungen</h3>
-    <p class="w3-justify">2024<br>Monographie «Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis», Paris. <i>Erscheint im Herbst 2024. </i></p>
+    <p class="w3-justify">2024<br>Monographie «Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis», Paris. <i>Les Editions de la Villette, 2025.</i></p>
 	
     <p class="w3-justify">2023<br>Monographie «Die griechisch-orthodoxe Allerheiligenkirche in München - Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West» Kunstverlag Josef Fink, Lindenberg im Allgäu (ISBN: 978-3-95976-457-5) Druckkostenzuschuss durch die Geschwister Boehringer Ingelheim Stiftung für Geisteswissenschaften</p>
 	<p class="w3-justify">2022<br>Artikel « Candilis-Josic-Woods : interdépendance et individualité d’une œuvre collective », in: Kollektiv und Kollaborativ : Positionen gemeinschaftlichen Arbeitens in Architektur und Planung vom 20. Jahrhundert bis zu Gegenwart, Bamberg 2022, DOI : 10.20378/irb-55457</p>
@@ -256,4 +256,5 @@ function w3_close() {
 
 </body>
 </html>
+
 
