--- a/b_say.html
+++ b/b_say.html
@@ -153,7 +153,7 @@
 </p><br>
 
 <h3 class="w3-opacity w3-left-align">Für was war ich verantwortlich?</h3>
-<p class="w3-justify">Roland Züger holte mich ins Boot für diesen Budenzauber von Jahrbuch. Als "executive editor" durfte ich bei der Auswahlsitzung dabei sein und Protokoll führen, anschliessend gemeinsam mit Fabian Ruppanner Ideen liefern, das Material bei den Büros einholen, eine Vorauswahl der Bilder treffen, mit der Grafik kommunizieren, die Essays lektorieren und Autoren und Autorinnen betreuen. Auf gut Deutsch, eigentlich so ziemlich alles was hinter den Kulissen so eines Schinkens anfällt. Ich habe für das Buch sieben Projekttexte verfasst, fünf davon auf Französisch, die extern auf Englisch übersetzt wurden, hauptsächlich für Projekte in der Romandie, in Bonaduz und in Zürich.
+<p class="w3-justify">Roland Züger holte mich ins Boot für diesen Budenzauber von Jahrbuch. Als Teil der Redaktion durfte ich bei der Auswahlsitzung dabei sein und Protokoll führen, anschliessend gemeinsam mit Fabian Ruppanner Ideen liefern, das Material bei den Büros einholen, eine Vorauswahl der Bilder treffen, mit der Grafik kommunizieren, die Essays lektorieren und Autoren und Autorinnen betreuen. Auf gut Deutsch, eigentlich so ziemlich alles was hinter den Kulissen so eines Schinkens anfällt. Ich habe für das Buch sieben Projekttexte verfasst, fünf davon auf Französisch, die extern auf Englisch übersetzt wurden, hauptsächlich für Projekte in der Romandie, in Bonaduz und in Zürich.
 </p><br>
 
 <div class="w3-display-container" style="width:100%">
@@ -246,3 +246,4 @@ function w3_close() {
 
 </body>
 </html>
+
