--- a/b_say.html
+++ b/b_say.html
@@ -157,7 +157,7 @@
 </p><br>
 
 <div class="w3-display-container" style="width:100%">
-	 <img src="img/sayjury.jpg" alt="books" style="width:100%">
+	 <img src="img/sayjury.jpg" alt="jury" style="width:100%">
   	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Foto: Roland Züger
   	</div>
 </div>
@@ -246,6 +246,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
