--- a/buecher.html
+++ b/buecher.html
@@ -136,7 +136,7 @@
 
 <!-- Wissenschaftliche Artikel -->
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="artikel">
-    <h3 class="w3-left-align">Wissenschaftliche und journalistische Artikel in:</h3>
+    <h3 class="w3-left-align">Wissenschaftliche Artikel in:</h3>
 </div>
 
 <!-- Panels -->	
@@ -179,6 +179,18 @@
         <div class="w3-white w3-card book-panel">
 			<a href="https://www.abebooks.com/FRENCH-ARTISTIC-CULTURE-CENTRAL-EAST-EUROPEAN-MODERN/22761446115/bd">
 			<img src="img/art.jpg" alt="Transcalar" class="w3-hover-opacity"></a>
+		</div>
+	</div>
+
+		<!-- Journalistische Artikel in: -->
+<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="artikel">
+    <h3 class="w3-left-align">Wissenschaftliche und journalistische Artikel in:</h3>
+</div>
+		<!-- 1. Artikel -->
+	<div class="w3-third w3-margin-bottom">
+        <div class="w3-white w3-card book-panel">
+			<a href="https://www.wbw.ch/de/heft/aktuelle-ausgabe/102025-hybride-stadt.html">
+			<img src="img/wbw.jpg" alt="Transcalar" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 
@@ -257,6 +269,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
