--- a/buecher.html
+++ b/buecher.html
@@ -186,6 +186,8 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="artikel">
     <h3 class="w3-left-align">Wissenschaftliche und journalistische Artikel in:</h3>
 </div>
+		<!-- Panels -->	
+	<div class="w3-row-padding">
 		<!-- 1. Artikel -->
 	<div class="w3-third w3-margin-bottom">
         <div class="w3-white w3-card book-panel">
@@ -193,7 +195,7 @@
 			<img src="img/wbw.jpg" alt="Transcalar" class="w3-hover-opacity"></a>
 		</div>
 	</div>
-
+	</div>
 </div>	
 </div>
 </div>
@@ -269,6 +271,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
