--- a/buecher.html
+++ b/buecher.html
@@ -184,7 +184,7 @@
 
 		<!-- Journalistische Artikel in: -->
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="artikel">
-    <h3 class="w3-left-align">Wissenschaftliche und journalistische Artikel in:</h3>
+    <h3 class="w3-left-align">Journalistische Artikel in:</h3>
 </div>
 		<!-- Panels -->	
 	<div class="w3-row-padding">
@@ -193,6 +193,13 @@
         <div class="w3-white w3-card book-panel">
 			<a href="https://www.wbw.ch/de/heft/aktuelle-ausgabe/102025-hybride-stadt.html">
 			<img src="img/wbw.jpg" alt="Transcalar" class="w3-hover-opacity"></a>
+		</div>
+	</div>
+		<!-- 2. Artikel -->
+	<div class="w3-third w3-margin-bottom">
+        <div class="w3-white w3-card book-panel">
+			<a href="b_say.html">
+			<img src="img/say.jpg" alt="Say" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 	</div>
@@ -271,6 +278,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
