--- a/buecher.html
+++ b/buecher.html
@@ -78,7 +78,7 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
     <h3 class="w3-left-align">Bücher als Autorin und Herausgeberin</h3>
 		
-	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur, die mich nicht loslassen, bemühe ich mich der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich zu machen.</p>
+	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur, die mich nicht loslassen, mache ich gerne der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich.</p>
 	
 <!-- Panels -->	
 	<div class="w3-row-padding">
@@ -89,6 +89,14 @@
         <div class="w3-white w3-card book-panel">
 			<a href="b_million.html">
 			<img src="img/million.jpg" alt="million" class="w3-hover-opacity"></a>
+		</div>
+	</div>
+
+	<!-- 2. Buch -->
+    <div class="w3-third w3-margin-bottom">
+        <div class="w3-white w3-card book-panel">
+        	<a href="b_alteshaus.html">
+			<img src="img/altesHaus.jpg" alt="San Francisco" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 
@@ -108,13 +116,6 @@
 		</div>
 	</div>
 	
-	<!-- 5. Buch -->
-    <div class="w3-third w3-margin-bottom">
-        <div class="w3-white w3-card book-panel">
-        	<a href="b_alteshaus.html">
-			<img src="img/altesHaus.jpg" alt="San Francisco" class="w3-hover-opacity"></a>
-		</div>
-	</div>
 
 	<!-- 6. Buch -->
 	<div class="w3-third w3-margin-bottom">
@@ -270,6 +271,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
