--- a/buecher.html
+++ b/buecher.html
@@ -78,7 +78,7 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
     <h3 class="w3-left-align">Bücher als Autorin und Herausgeberin</h3>
 		
-	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur, die mich nicht loslassen, mache ich gerne der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich.</p>
+	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur mache ich gerne der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich.</p>
 	
 <!-- Panels -->	
 	<div class="w3-row-padding">
@@ -263,6 +263,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
