--- a/b_million.html
+++ b/b_million.html
@@ -157,8 +157,8 @@
  <p class="w3-opacity w3-left-align"><i>Un événement de Philippe Troyon et Korinna Zinovia Weber</i></p>
 	
 	<div class="w3-display-container" style="width:100%">
-	 <img src="img/affiche.JPG" alt="affiche" style="width:100%">
-  	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Foto: Roland Züger
+	 <img src="img/affiche.jpg" alt="affiche" style="width:100%">
+  	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Graphisme: Philippe Le Bihan
   	</div>
 </div>
 	
@@ -248,3 +248,4 @@ function w3_close() {
 
 </body>
 </html>
+
