--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <p class="w3-opacity w3-center"><i>Aktuelle Projekte und Neuerscheinungen</i></p><br>
 	  
 	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur - für die nächste(n) Generation(en) überliefert.</p>
-	<p class="w3-justify"><i></i>Découvrir l'architecture à travers les mots.</i></p>
+	<p class="w3-justify"><i>Découvrir l'architecture à travers les mots.</i></p>
 	  
 
 <!-- Panels -->	
@@ -245,5 +245,6 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
