--- a/angebote.html
+++ b/angebote.html
@@ -90,16 +90,18 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=omDt9zQKYRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
 	
-	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
-    <h3 class="w3-left-align">Aktuelle Termine</h3>
 	
-	<p class="w3-justify">30. November 2024</p>
-	<p class="w3-justify"><b>Katholische Allerheiligenkirche München</b></p>
 	
-	</div>
 	
+
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h3 class="w3-left-align">Bisherige Vorträge (Auswahl)</h3>
+
+	<p class="w3-justify">27. Oktober 2025</p>
+	<p class="w3-justify"><b>SCAM, Paris</b></p>
+		
+	<p class="w3-justify">30. November 2024</p>
+	<p class="w3-justify"><b>Katholische Allerheiligenkirche München</b></p>
 	
 	<p class="w3-justify">14. April 2024</p>
 	<p class="w3-justify"><b>Evangelische Nikodemuskirche München</b>: "Marienlieder und die griechisch-orthodoxe Nachbargemeinde Allerheiligen"</p>
@@ -291,3 +293,4 @@ function w3_close() {
 
 </body>
 </html>
+
