--- a/angebote.html
+++ b/angebote.html
@@ -88,8 +88,10 @@
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
 	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=omDt9zQKYRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/omDt9zQKYRY?si=Cs4z0DeMVpCGB67g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
-	
 	
 	
 	
@@ -293,4 +295,5 @@ function w3_close() {
 
 </body>
 </html>
+
 
