--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -138,7 +138,7 @@
 <!-- Slideshow -->	 
   <div class="w3-content w3-display-container">
    <img class="mySlides" src="img/kinderbuch.jpg" style="width:100%">
-   <img class="mySlides" src="img/gemalteimg.jpg" style="width:100%">
+   <img class="mySlides" src="img/gemaltebilder.jpg" style="width:100%">
    <img class="mySlides" src="img/ZeichnungLS.jpg" style="width:100%">
    <img class="mySlides" src="img/echteshaus.jpg" style="width:100%">
    <img class="mySlides" src="img/Tisch-Bücher.jpg" style="width:100%">
@@ -257,3 +257,4 @@ function showDivs(n) {
 
 </body>
 </html>
+
