--- a/angebote.html
+++ b/angebote.html
@@ -121,7 +121,8 @@
 	<p class="w3-justify"><b>Ecole Polytechnique Fédérale de Lausanne, Schweiz</b>: Verteidigung der Doktorarbeit "Les «vestiges» de l’opération Million dans l’oeuvre de Georges Candilis - Actualités et Strategies de sauvegarde pour un patrimoine du second après-guerre)" vor 40 Personen.</p>
 
 	<iframe width="560" height="315" src="https://youtu.be/AkX5DiVqX1U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/AkX5DiVqX1U?si=BgFQaFSNpjwnNB6D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		
 	<p class="w3-justify">März 2016</p>
 	<p class="w3-justify"><b>United Nations New York Conference "Cities of the Future", USA</b>: Präsentation des Projektes "InterAging Home"</p>
 	
@@ -288,6 +289,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
