--- a/angebote.html
+++ b/angebote.html
@@ -125,7 +125,9 @@
 		
 	<p class="w3-justify">März 2016</p>
 	<p class="w3-justify"><b>United Nations New York Conference "Cities of the Future", USA</b>: Präsentation des Projektes "InterAging Home"</p>
-	
+
+	<img src="img/UN.jpg" alt="UN" style="width:100%">
+		
 	<p class="w3-justify">März 2015</p>
 	<p class="w3-justify"><b>16th China International Real Estate & Architectural Technology Fair in Beijing</b>: Präsentation des Projektes "CubAge Quartier"</p>
 	
@@ -289,6 +291,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
