--- a/angebote.html
+++ b/angebote.html
@@ -81,7 +81,7 @@
 		<!-- Banner -->
 		<img src="img/vortrag.jpg" alt="Strati" style="width:100%">
     <h3 class="w3-left-align">Vorträge</h3>
-	<p class="w3-justify">Architektur ist durch Erzählungen anders erlebbar. Mit meiner Vortragstätigkeit möchte ich Menschen von Bauwerken erzählen, die kaum von der Öffentlichkeit wahrgenommen werden. Für jeden Vortrag erstelle ich ein individuell angepasstes Plakat und stelle es in digitaler Form den Organisierenden zur Verfügung um besser für die Veranstaltung werben zu können.</p>
+	<p class="w3-justify">Architektur ist durch Erzählungen anders erlebbar. Mit meiner Vortragstätigkeit möchte ich Menschen von Bauwerken erzählen, die kaum von der Öffentlichkeit wahrgenommen werden.</p>
 	<p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. Ich bringe eine langjährige Vortragserfahrung mit und mir ist es wichtig den Vortrag an das jeweilige Publikum anzupassen. </p>
 	
 </div>
@@ -289,6 +289,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
