--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h1 class="w3-wide">Dr. Korinna Zinovia Weber</h1>
 	<h2 class="w3-wide">Bauwerke erforschen, erzählen, verstehen</h2>
+	<p class="w3-wide w3-opacity"> Découvrir l'architecture à travers de mots</p>
 	<h3 class="w3-wide">Expertin für Architektur des 20. Jahrhunderts, proaktive Denkmalpflege und (digitale) Publikationen</h3>
+	<p class="w3-wide w3-opacity"> Spécialiste de l’architecture du XXe siècle, de la conservation proactive du patrimoine et des publications (numériques).</p>
 	</div>
 
 <!-- Page content -->
@@ -245,6 +247,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
