--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
   <div class="w3-theme-l1" id="buch">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Bücher und Veröffentlichungen</h2>
-      <p class="w3-opacity w3-center"><i>Projets actuels et nouvelles publications.</i></p><br>
+      <p class="w3-opacity w3-center"><i>Projets actuels et nouvelles publications</i></p><br>
 	  
 	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur - für die nächste(n) Generation(en) überliefert.</p>
-	<p class="w3-justify"><i>Des connaissances et des histoires passionnantes sur l’architecture — léguées aux prochaines générations.</i></p>
+	<p class="w3-justify w3-opacity"><i>Des connaissances et des histoires passionnantes sur l’architecture — léguées aux prochaines générations.</i></p>
 	  
 
 <!-- Panels -->	
@@ -247,6 +247,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
