--- a/b_steinhausen.html
+++ b/b_steinhausen.html
@@ -136,7 +136,7 @@
 
       		</div>
 		 <!-- Button jetzt Bestellen -->
-      	 <a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://kunstverlag-fink.de/" target="_blank">Bald Bestellen!</a>
+      	 <a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://kunstverlag-fink.de/titel/steinhausen-ch-kirchen-und-begegnungszentrum-chilematt/" target="_blank">Jetzt Bestellen!</a>
     	</div>
     </div>
  </div>
@@ -233,3 +233,4 @@ function w3_close() {
 
 </body>
 </html>
+
