--- a/b_steinhausen.html
+++ b/b_steinhausen.html
@@ -144,7 +144,7 @@
  <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
  
 <!-- Buchbeschrieb -->	
-	<p class="w3-justify">Der Architektur- und Kunstführer erscheint im November 2025 beim Kunstverlag Josef Fink.
+	<p class="w3-justify">Der Architektur- und Kunstführer ist im November 2025 beim Kunstverlag Josef Fink erschienen.
 </p>
 <p class="w3-justify"> Die Kath. Kirchengemeinde Steinhausen wünschte sich für ihr Kirchen- und Begegnungszentrum "Chilematt", erbaut von Ernst Gisel 1981-1983, einen hochwertigen kleinen Kunstführer. Gemeinsam mit Lou Sophie Dörig fertigten wir den Führer innerhalb von fünf Monaten.
 </p><br>
@@ -233,4 +233,5 @@ function w3_close() {
 
 </body>
 </html>
+
 
