--- a/b_steinhausen.html
+++ b/b_steinhausen.html
@@ -129,7 +129,7 @@
       	<div class="book-subtitle">Architektur- und Kunstführer.</div>	
 			<div class="book-details">
 			     Korinna Zinovia Weber, Lou Sophie Dörig<br>
-			     Erscheint im November 2025<br>
+			     Erschienen im November 2025<br>
 			     Kunstverlag Josef Fink<br>
            48 Seiten<br>
            Deutsch<br>
@@ -233,5 +233,6 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
