--- a/b_steinhausen.html
+++ b/b_steinhausen.html
@@ -146,7 +146,8 @@
 <!-- Buchbeschrieb -->	
 	<p class="w3-justify">Der Architektur- und Kunstführer ist im November 2025 beim Kunstverlag Josef Fink erschienen.
 </p>
-<p class="w3-justify"> Die Kath. Kirchengemeinde Steinhausen wünschte sich für ihr Kirchen- und Begegnungszentrum "Chilematt", erbaut von Ernst Gisel 1981-1983, einen hochwertigen kleinen Kunstführer. Gemeinsam mit Lou Sophie Dörig fertigten wir den Führer innerhalb von fünf Monaten.
+<p class="w3-justify"> Als das Kirchen- und Begegnungszentrum Chilematt für die Gemeinde Steinhausen vom Architekten Ernst Gisel 1981 fertiggestellt wird, eilt es seiner Zeit voraus, denn es beherbergt sowohl katholische als auch evangelische Kirche in flexibel nutzbaren Räumen unter einem Dach mit gemeinsam genutzten Taufstein. Zusammen mit der St. Matthias-Kirche bildet es das Zentrum von Steinhausen im Kanton Zug. Der zunächst von den Einwohnenden oftmals kritisch beäugte Bau überzeugt bis heute durch seine Beständigkeit und wird nach wie vor seinem ursprünglichen Zweck entsprechend multifunktional genutzt.
+Der Kleine Kunstführer von Korinna Zinovia Weber und Lou Sophie Dörig beleuchtet die Geschichte des Begegnungszentrums mit Archivmaterial und bereichert sie mit aktuellen Aufnahmen durch Siegfried Wameser.
 </p><br>
 
 <!-- Über die Autorinnen -->	
@@ -181,7 +182,7 @@
  </div>
 
  <!-- Publikationsberatung -->	
- <p class="w3-center"><b>Haben Sie Interesse Ihr eigenes Buchprojekt zu verwirklichen? Gerne begleiten wir Sie dabei!</b></p>
+ <p class="w3-center"><b> Dieser kleine Kunstführer entstand innerhalb von fünf Monaten. Haben Sie Interesse Ihr eigenes Buchprojekt zu verwirklichen? Gerne begleiten wir Sie dabei!</b></p>
 
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
 	<a href="angebote.html#publikation"><button class="w3-button w3-blue-grey">Publikationsberatung</button></a>
@@ -233,6 +234,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
