--- a/b_million.html
+++ b/b_million.html
@@ -179,6 +179,9 @@ scientifique menée vingt ans plus tard sur cette architecture oubliée, essenti
 habitants. L’habitat n’est pas qu’un agencement de murs mais aussi de vivants qui habitent parfois des vestiges, une
 réalité que la politique oublie bien souvent.
 </p>
+
+	<p class="w3-opacity w3-left-align"><i>Extraits du livre d'or</i></p> 
+	 <p class="w3-justify"><i>"Superbe soirée. Le film d'entretiens des habitants au moment de la démolition de la cité Montillet (une des cités du Million, construites par l'équipe de Candilis) est passionnant et montre bien la diversité des habitants et de la complexité de leurs sentiments face à cettee démolition. On a, peut-être, pas assez parlé du projet de l'équipe Candilis, Josic et Woods pour ce concours du million (un appartement T3 pour moins d'1 million de francs de 1954) et de ses limites. Mais il y a aussi le livre de Korinna Weber." Jean-Marc Chanteux </i></p>
 	<br>
 
 <!-- Ceci pourrait aussi vous intéresser -->	
@@ -258,5 +261,6 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
