--- a/angebote.html
+++ b/angebote.html
@@ -83,17 +83,18 @@
     <h3 class="w3-left-align">Vorträge</h3>
 	<p class="w3-justify">Architektur ist durch Erzählungen anders erlebbar. Mit meiner Vortragstätigkeit möchte ich Menschen von Bauwerken erzählen, die kaum von der Öffentlichkeit wahrgenommen werden.</p>
 	<p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. Ich bringe eine langjährige Vortragserfahrung mit und mir ist es wichtig den Vortrag an das jeweilige Publikum anzupassen. </p>
-	
+	<img src="img/Südtirol.jpg" alt="Südtirol" style="width:100%">
 </div>
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/omDt9zQKYRY?si=NHQx9BkNQczDzJyb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	
 		
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h3 class="w3-left-align">Bisherige Vorträge (Auswahl)</h3>
 
 	<p class="w3-justify">27. Oktober 2025</p>
 	<p class="w3-justify"><b>SCAM, Paris</b></p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		
 	<p class="w3-justify">30. November 2024</p>
 	<p class="w3-justify"><b>Katholische Allerheiligenkirche München</b></p>
@@ -107,7 +108,8 @@
 
 	<p class="w3-justify">27. November 2023</p>
 	<p class="w3-justify"><b>Gr.-Orth. Allerheiligenkirche München</b>: "Die Gr.-Orth. Allerheiligenkirche in München. Ein Baupojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West" Offizielle Buchvorstellung mit 100 Gästen.</p>
-
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/omDt9zQKYRY?si=NHQx9BkNQczDzJyb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		
 	<p class="w3-justify">24. November 2023</p>
 	<p class="w3-justify"><b>Eidgenössische Technische Hochschule Zürich, Schweiz</b>: "How did a research become a book within a year?" vor 15 Personen.</p>
 	
@@ -289,6 +291,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
