--- a/b_transcalar.html
+++ b/b_transcalar.html
@@ -158,17 +158,19 @@
   <p class="w3-justify">With essays by Charlotte Malterre-Barthes, Paola Viganò, Tommaso Pietropolli, Laila Seewang, Alfredo Thiermann, Xavier Nueno, Pier Vittorio Aureli, Jo Taillieu, Véronique Patteeuw, Martin Fröhlich, Lara Monti.
    </p>
   <br>
-  
+
+	  <div class="w3-display-container" style="width:100%">
+	 <img src="img/domus.JPG" alt="books" style="width:100%">
+  	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Book presentation at Domus Haus Basel, Photo: Sooanne Berner
+  	</div>
+	  </div>
+
+	 
   <h3 class="w3-opacity w3-left-align">What was I responsible for?</h3>
   <p class="w3-justify">Jeffrey Huang contacted me to join the editorial board because they were looking for someone with experience in book making - which I had - in order to turn an exhibition at Archizoom into a book. I gathered all the material from the constributers, pre-selected it and worked in close collaboration with Jonas Vögeli from Hubertus Design for the look and feel. The colored pages for the essay was an idea I had in the first meeting and I am glad Jonas picked it up until the very end...The book was awarded "Most beautiful German Book in the category 'Science'". More information <a href="https://www.stiftung-buchkunst.de/die-schoensten-deutschen-buecher/die-praemierten/transcalar-prospects-in-climate-crisis/?view=grid&year=2025">here.</a>
   </p> 
 
-	 <div class="w3-display-container" style="width:100%">
-	 <img src="img/domus.JPG" alt="books" style="width:100%">
-  	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Foto: Sooanne Berner
-  	</div>
-
-</div>
+	
  
 
 <!-- You may also be interested in -->	
@@ -254,4 +256,5 @@ function w3_close() {
 
 </body>
 </html>
+
 
