--- a/b_transcalar.html
+++ b/b_transcalar.html
@@ -160,7 +160,7 @@
   <br>
 
 	  <div class="w3-display-container" style="width:100%">
-	 <img src="img/domus.JEPG" alt="domus" style="width:80%">
+	 <img src="img/domus.jpeg" alt="domus" style="width:80%">
   	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Book presentation at Domus Haus Basel, Photo: Sooanne Berner
   	</div>
 	  </div>
@@ -256,6 +256,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
