--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -51,12 +51,7 @@
     <h3 class="w3-left-align">Portrait</h3>
     <p class="w3-justify"> <i>Warum sind Gebäude aus der Nachkriegszeit und später so unbeliebt?</i> Diese Frage hat mich während des Architekturstudiums nicht losgelassen, so dass ich mich entschied im Rahmen einer Promotion eine Antwort dafür zu finden. 
 	<p class="w3-justify"> Aufgewachsen in München in einer deutsch-griechischen Familie habe ich mich nach dem Abitur entschlossen Architektur zu studieren, das Fach zwischen Technik und Kunst. Nachdem ich ein paar Jahre in der Forschung und Lehre an renommierten Universitäten in der Schweiz tätig war, wagte ich 2024 den Schritt in die Selbstständigkeit.
-	
-	
-	
-	<p class="w3-justify">Mit meinem 2023 erschienenen Buch „Die Gr.-Orth. Allerheiligenkirche in München – ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West“ (Kunstverlag Josef Fink) möchte ich Impulse für den Umgang mit jungen Bauwerken als zukünftige Denkmäler setzen.</p>
-	
-	
+		
 	<p class="w3-justify">Ich lebe und arbeite in Zürich und München.</p>
 	</div>
 	
@@ -93,6 +88,11 @@ im Oktober 2023, Druckkosten gefördert durch die Geschwister Boehringer Ingelhe
 	<p class="w3-justify"><b>Ecole Nationale Supérieure d’Architecture Paris La Villette, Frankreich</b>: Auslandsjahr</p>
 	<p style="color:cadetblue">Mobilitätsstipendium des BayFrance</p>
 
+	</div>
+
+<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    <h3 class="w3-left-align">Netzwerk</h3>
+    <p class="w3-justify">Ich arbeite gerne mit Menschen zusammen, mit denen über kurz oder lang wechselseitige Synergien und inspirierende Kooperationen entstehen und pflege ein interdisziplinäres Netzwerk hauptsächlich in München, Paris, Lausanne und Zürich.</p>
 	</div>
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
@@ -142,3 +142,4 @@ function w3_close() {
 
 </body>
 </html>
+
