--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -93,7 +93,8 @@ im Oktober 2023, Druckkosten gefördert durch die Geschwister Boehringer Ingelhe
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h3 class="w3-left-align">Netzwerk</h3>
     <p class="w3-justify">Ich arbeite gerne mit Menschen zusammen, mit denen über kurz oder lang wechselseitige Synergien und inspirierende Kooperationen entstehen und pflege ein interdisziplinäres Netzwerk hauptsächlich in München, Paris, Lausanne und Zürich.</p>
-	</div>
+	<p class="w3-justify"><a href="https://gik-a.de">gerstmeir inić kučera architekten</a></p>
+</div>
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h3 class="w3-left-align">Und sonst so...</h3>
@@ -142,4 +143,5 @@ function w3_close() {
 
 </body>
 </html>
+
 
