--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -97,6 +97,7 @@ im Oktober 2023, Druckkosten gefördert durch die Geschwister Boehringer Ingelhe
 	<p class="w3-justify">Thomas GERSTMEIR, Architekt von <a href="https://gik-a.de">gerstmeir inić kučera architekten</a></p>
 	<p class="w3-justify">Philippe TROYON, Filmemacher von <a href="https://www.imaginem.fr/">Imaginem</a></p>
 	<p class="w3-justify">Naïri ARZOUMANIAN-RUMIN, Juristin von <a href="https://www.fm-a.ch/#contenu">Fischer Montavon + Associés</a></p>
+	<p class="w3-justify">Martin ROESCH, Architekt von <a href="https://graf-roesch.ch/home">Graf Roesch Architekten</a></p>
 </div>
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
@@ -146,6 +147,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
