--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         	<p><b>Architektur- und Kunstführer. Kirchen- und Begegnungszentrum Chilematt, Steinhausen</b></p>
         	<p class="w3-opacity">Korinna Zinovia Weber, Lou Sophie Dörig</p>
         	<p>Der Architektur- und Kunstführer über das Chilematt in Steinhausen erscheint im November 2025. Das Buch soll einen kompakten Einblick und neuen Zugang zum Verständnis des Baus von Ernst Gisel gewähren.</p>
-			<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://kunstverlag-fink.de/">Bald bestellen! </button>
+			<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://kunstverlag-fink.de/titel/steinhausen-ch-kirchen-und-begegnungszentrum-chilematt/">Jetzt bestellen! </button>
 			</div>
 		</div>
 	</div>
@@ -247,6 +247,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
