--- a/b_steinhausen.html
+++ b/b_steinhausen.html
@@ -151,7 +151,9 @@ Der Kleine Kunstführer von Korinna Zinovia Weber und Lou Sophie Dörig beleucht
 
 <!-- Über die Autorinnen -->	
  <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
-	
+	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    <img src="img/steinhausen2.jpg" alt="steinhausen2" style="width:50%">
+	</div>
 	<p class="w3-justify"><b>Dr. Korinna Zinovia WEBER</b> hat Architektur an der TU München und ENSA Paris-La Villette studiert und an der EPF Lausanne über Sanierungen im Massenwohnungsbau der Nachkriegszeit promoviert. Von 2019 bis 2023 war sie Lehrbeauftragte an der ETH Zürich und erhielt vom Zentralinstitut für Kunstgeschichte in München den Theodor-Fischer-Preis 2022. Sie ist Autorin verschiedener Publikationen: «Die Griechisch-Orthodoxe Allerheiligenkirche in München» (Kunstverlag Josef Fink, 2023), «Mein NEUES altes Haus» (Architechne, 2024) und «Grands Ensembles en Héritage» (Editions de la Villette, 2025). Wenn sie gerade keine Bücher schreibt, erkundet sie gemeinsam mit ihren Kindern die Welt oder tanzt Ballett.
  </p>
   <a href="https://linkedin.com/in/dr-korinna-zinovia-weber-05516996" class="w3-button w3-blue-gray w3-hover-dark-grey" style="padding:6px 10px;">
@@ -233,6 +235,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
