--- a/b_steinhausen.html
+++ b/b_steinhausen.html
@@ -144,11 +144,16 @@
  <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
  
 <!-- Buchbeschrieb -->	
-
+<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    <img src="img/steinhausen1.jpg" alt="steinhausen1" style="width:100%">
+	</div>
 <p class="w3-justify"> Als das Kirchen- und Begegnungszentrum Chilematt für die Gemeinde Steinhausen vom Architekten Ernst Gisel 1981 fertiggestellt wird, eilt es seiner Zeit voraus, denn es beherbergt sowohl katholische als auch evangelische Kirche in flexibel nutzbaren Räumen unter einem Dach mit gemeinsam genutzten Taufstein. Zusammen mit der St. Matthias-Kirche bildet es das Zentrum von Steinhausen im Kanton Zug. Der zunächst von den Einwohnenden oftmals kritisch beäugte Bau überzeugt bis heute durch seine Beständigkeit und wird nach wie vor seinem ursprünglichen Zweck entsprechend multifunktional genutzt.
 Der Kleine Kunstführer von Korinna Zinovia Weber und Lou Sophie Dörig beleuchtet die Geschichte des Begegnungszentrums mit Archivmaterial und bereichert sie mit aktuellen Aufnahmen durch Siegfried Wameser.
 </p><br>
-
+<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    <img src="img/steinhausen3.jpg" alt="steinhausen3" style="width:100%">
+	</div>
+	 
 <!-- Über die Autorinnen -->	
  <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
@@ -160,7 +165,7 @@ Der Kleine Kunstführer von Korinna Zinovia Weber und Lou Sophie Dörig beleucht
   <i class="fab fa-linkedin"></i>
   </a>
 
- 	<p class="w3-justify"><b>Lou Sophie Dörig</b> absolvierte ihren Bachelor in Architektur an der ETH Zürich und sammelte anschliessend Berufserfahrung in Architekturbüros in Zürich und Hamburg. Derzeit studiert sie im Master an der ETH, mit besonderem Interesse an kontextsensibler Gestaltung, sozial wirksamen Interventionen und experimentellen Bauansätzen. In ihrer Freizeit findet sie Ausgleich beim Klettern und Inspiration beim Lesen und Schreiben.
+ 	<p class="w3-justify"><b>Lou Sophie DÖRIG</b> absolvierte ihren Bachelor in Architektur an der ETH Zürich und sammelte anschliessend Berufserfahrung in Architekturbüros in Zürich und Hamburg. Derzeit studiert sie im Master an der ETH, mit besonderem Interesse an kontextsensibler Gestaltung, sozial wirksamen Interventionen und experimentellen Bauansätzen. In ihrer Freizeit findet sie Ausgleich beim Klettern und Inspiration beim Lesen und Schreiben.
  </p>
   <a href="https://linkedin.com/in/lou-sophie-dörig-49b555162" class="w3-button w3-blue-gray w3-hover-dark-grey" style="padding:6px 10px;">
   <i class="fab fa-linkedin"></i>
@@ -235,6 +240,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
