--- a/angebote.html
+++ b/angebote.html
@@ -79,13 +79,12 @@
 <!-- Vorträge -->
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vorträge">
 		<!-- Banner -->
-		<img src="img/vortrag.jpg" alt="Strati" style="width:100%">
+		<img src="img/steinhausen1.jpg" alt="steinhausen" style="width:100%">
     <h3 class="w3-left-align">Vorträge</h3>
 	<p class="w3-justify">Architektur ist durch Erzählungen anders erlebbar. Mit meiner Vortragstätigkeit möchte ich Menschen von Bauwerken erzählen, die kaum von der Öffentlichkeit wahrgenommen werden.</p>
 	<p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. Ich bringe eine langjährige Vortragserfahrung mit und mir ist es wichtig den Vortrag an das jeweilige Publikum anzupassen. </p>
 	<img src="img/Südtirol.jpg" alt="Südtirol" style="width:100%">
 </div>
-	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
 	
 		
@@ -291,6 +290,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
