--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
  <div>
 <a href="buecher.html"><img src="img/index.jpg" alt="buecher" style="width:100%" class="w3-hover-opacity"></a>		
 </div>
-
+<img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
     <!-- Start -->
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h1 class="w3-wide">Dr. Korinna Zinovia Weber</h1>
@@ -247,6 +247,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
