--- a/buecher.html
+++ b/buecher.html
@@ -65,7 +65,7 @@
 <img src="img/publi.jpg" alt="Strati" style="width:100%">
 
 <!-- Start -->
-  
+  <img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h1 class="w3-wide">Dr. Korinna Zinovia Weber</h1>
 	<h2 class="w3-wide">Bauwerke erforschen, erzählen, verstehen</h2>
@@ -263,6 +263,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
