--- a/angebote.html
+++ b/angebote.html
@@ -56,7 +56,7 @@
 
 <!-- Banner -->
 <img src="img/vortrag.jpg" alt="Strati" style="width:100%">
-
+<img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
 <!-- Start -->  
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h1 class="w3-wide">Dr. Korinna Zinovia Weber</h1>
@@ -290,6 +290,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
