--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -37,7 +37,7 @@
 
 <!-- Banner -->
 <img src="img/portrait.jpg" alt="Strati" style="width:100%">
-
+<img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
 <!-- Start -->
   
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
@@ -147,6 +147,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
