--- a/angebote.html
+++ b/angebote.html
@@ -70,8 +70,8 @@
 		<a href="#vorträge"><button class="w3-button w3-blue-grey">Vorträge</button></a>
 		<a href="#Kinderlesungen"><button class="w3-button w3-blue-grey">Kinderlesungen</button></a>
 		<a href="#publikation"><button class="w3-button w3-blue-grey">Publikationsberatung</button></a>
-		<a href="#historische"><button class="w3-button w3-blue-grey">Historische Aufarbeitung</button></a>
-		<a href="#nachlass"><button class="w3-button w3-blue-grey">Nachlassbewertung</button></a>
+		<a href="#historische"><button class="w3-button w3-blue-grey">Historische Forschung</button></a>
+		<a href="#nachlass"><button class="w3-button w3-blue-grey">Nachlassbewertung & Provinienzforschung</button></a>
 	</div>
 	</div>
 
@@ -290,6 +290,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
