--- a/angebote.html
+++ b/angebote.html
@@ -79,9 +79,9 @@
 <!-- Vorträge -->
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vorträge">
 		<!-- Banner -->
-		<img src="img/steinhausen1.jpg" alt="steinhausen" style="width:100%">
+		<img src="img/steinhausen1.jpg" alt="steinhausen" style="width:80%">
     <h3 class="w3-left-align">Vorträge</h3>
-	<p class="w3-justify">Architektur ist durch Erzählungen anders erlebbar. Mit meiner Vortragstätigkeit möchte ich Menschen von Bauwerken erzählen, die kaum von der Öffentlichkeit wahrgenommen werden.</p>
+	<p class="w3-justify">Architektur ist durch Erzählungen anders erlebbar. Mit meiner Vortragstätigkeit möchte ich Menschen von Bauwerken erzählen und sie dafür begeistern.</p>
 	<p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. Ich bringe eine langjährige Vortragserfahrung mit und mir ist es wichtig den Vortrag an das jeweilige Publikum anzupassen. </p>
 	<img src="img/Südtirol.jpg" alt="Südtirol" style="width:100%">
 </div>
@@ -152,9 +152,9 @@
 </div>
     <h3 class="w3-left-align">Lesungen für Kinder</h3>
 	<p class="w3-justify">2024 habe ich ein Kinderbuch über Umbau statt Neubau geschrieben, das von Meruert Zharekesheva von Hand illustriert wurde. Das Buch “Mein NEUES altes Haus” erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief.</p>
-    <p class="w3-justify">Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen nähergebracht. Daraus habe ich ein Konzept für eine Veranstaltung speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus menem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf.</p>
-    <p class="w3-justify">Die Veranstaltung wurde schon in der Schule Freilager, in zwei Kindergärten in Zürich und München, in einer Kita der Stiftung Kihz und im GZ Bäckeranlage gegeben. Das Feedback des jungen Publikums war überwältigend positiv begeistert.</p>
-    <p class="w3-justify">Darf ich einmal für Sie/Ihre Klasse/Ihre Gruppe/Ihre Familienfeier/Ihre Veranstaltung/Ihr Geburtstagsfest lesen kommen?
+    <p class="w3-justify">Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen nähergebracht. Daraus habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf.</p>
+    <p class="w3-justify">Die Veranstaltung wurde schon in der Schule Freilager, in zwei Kindergärten in Zürich und München, in einer Kita der Stiftung Kihz, dem Architekturzentrum Zürich, dem ZAZ Bellerive und im GZ Bäckeranlage gegeben. Das Feedback des jungen Publikums war überwältigend positiv begeistert.</p>
+    <p class="w3-justify">Darf ich einmal für Sie/Ihre Klasse/Ihre Gruppe/Ihr Fest lesen kommen?
 	Kontaktieren Sie mich gerne!</p>
 </div>
 
@@ -164,38 +164,23 @@
 		<img src="img/publi.jpg" alt="Strati" style="width:100%">
 	<h3 class="w3-left-align">Publikationsberatung</h3> 
 	<p class="w3-left-align"><i>I am happy to assist you with your project in German, English, French, Italian or Greek.</i></p>
-    <p class="w3-justify">Sie haben die Idee oder sogar schon ein Manuskript und wissen nicht, was daraus werden kann? Gerne begleite ich Sie dabei. Bevor Sie eine Beratung in Anspruch nehmen setzten Sie sich am Besten mit folgenden Fragen auseinander:</p>
+    <p class="w3-justify">Sie haben die Idee oder sogar schon ein Manuskript und wissen nicht, was daraus werden kann? Gerne begleite ich Sie dabei. Gemeinsam erörtern wir:</p>
 	<ul class="w3-left-align">
 		<li>Wer ist das Zielpublikum?</li>
 		<li>Was ist das vorhandene Material? Sind u.a. Bildrechte geklärt?</li>
 		<li>Wie soll das Produkt aussehen, digital oder Print? Es hat sich als sehr hilfreich erwiesen ein Referenzprodukt aus Ihrer Bibliothek für das Erstgespräch bereit zu halten.</li>
 		<li>Was ist die Zeitschiene?</li>
-	</ul> 
-	
-	<h3 class="w3-left-align">Basis-Paket</h3>
-	 <p class="w3-justify">Dieses Angebot ist für Sie attraktiv, wenn Sie eine erste Orientierung suchen.</p>
-	 <ul class="w3-left-align">
-		<li>2 x Beratungsgespräch à 45min</li>
-		<li>Erstellung eines Konzeptes (inkl. Richtungen für Grafikdesign) für Ihr Buch oder digitale Publikation.</li>
-		<li>Liste für den spezifischen Fall in Frage kommender Verläge, die für eine Printversion kontaktiert werden können.</li>
-	</ul> 
-	<h3 class="w3-left-align">Erweiterte Publikationsbegleitung (auf Anfrage)</h3>
-	<p class="w3-justify">Dieses Angebot ist für Sie attraktiv, wenn Sie bis zum fertigen Produkt Unterstützung suchen.</p>
-	 <ul class="w3-left-align">
-		<li>Phase 1 - Erstellung eines Konzeptes (inkl. Richtungen für Grafikdesign) für Ihr Buch oder digitale Publikation.</li>
-		<li>Phase 2 - Layouterstellung</li>
+		<li>Wie soll sich das Buch anfühlen?</li>
+		<li>Welcher Verlag kommt in Frage?</li>
+		<li>Wo gibt es Fördermittel?</li>
 	</ul> 
 	</div>
 	
-	
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="publik">
-    <h3 class="w3-left-align">Referenzen</h3>
-    <p class="w3-justify">Neben und während meiner beruflichen Tätigkeit konnte ich diverse Erfahrungen in der Erstellung von Publikationen sammeln. Dabei kenne ich sowohl die Perspektive als Autorin als auch als Herausgeberin.</p>
-	<p class="w3-justify">Zwischen 2022 und 2023 habe ich ein Buch über einen Kirchenbau der 1990er Jahre geschrieben, gestaltet und gelayoutet. Es ist 2023 beim <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Kunstverlag Josef Fink</a> erscheinen. </p>
-	<p class="w3-justify">2020 habe ich meine Doktorarbeit (700 Seiten), ausgerichtet für ein wissenschaftliches Publikum, in ein Leser-freundliches Manuskript (300 Seiten) gewandelt, das 2024 bei einem französischen Verlag erscheinen wird.</p>
-	<p class="w3-justify">Besonders spannend war es die experimentelle Publikationsformen des TACK-Projektes als Projektmanagerin an der ETH Zürich zwischen 2019 und 2023 zu begleiten. Die <a href="https://tacit-knowledge-architecture.com/object/">hauptsächlich digital publizierten Beiträge</a> sind als Print-on-Demand-Bücher bestellbar und können inhaltlich von der Leserschaft selbst zusammengesetzt werden.</p>
-	<p class="w3-justify">Während meiner Arbeit an der ETH Zürich habe ich zwischen 2019 und 2022 für Prof. Markus Peter 11 Reader (je 200 Seiten) überarbeitet und bis zum Druck begleitet.</p>
-	<p class="w3-justify">Seit August 2023 unterstütze ich als Mit-Herausgeberin einen Ausstellungskatalog an der Ecole Polytechnique Fédérale de Lausanne, der 2024 erscheinen soll.</p>
+   
+    <p class="w3-justify">Neben und während meiner beruflichen Tätigkeit konnte ich diverse Erfahrungen in der Erstellung von Publikationen (analog und digital) sammeln. Dabei kenne ich sowohl die Perspektive als Autorin als auch als Herausgeberin.</p>
+	<p class="w3-justify">Eine Übersicht meiner Publikationen finden Sie unter <a href="https://korinnaweber.com/buecher.html"</a> Bücher. </p>
+
 </div>
 
 <!-- Historische Aufarbeitung -->
@@ -290,6 +275,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
