--- a/angebote.html
+++ b/angebote.html
@@ -175,7 +175,7 @@
 		<li>Wo gibt es Fördermittel?</li>
 	</ul> 
     <p class="w3-justify">Neben und während meiner beruflichen Tätigkeit konnte ich diverse Erfahrungen in der Erstellung von Publikationen (analog und digital) sammeln. Dabei kenne ich sowohl die Perspektive als Autorin als auch als Herausgeberin.</p>
-	<p class="w3-justify">Eine Übersicht meiner Publikationen finden Sie unter <a href="https://korinnaweber.com/buecher.html" Bücher. </a></p>
+	<p class="w3-justify">Eine Übersicht meiner Publikationen finden Sie unter <a href="https://korinnaweber.com/buecher.html">Bücher.</a></p>
 
 </div>
 
@@ -271,6 +271,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
