--- a/angebote.html
+++ b/angebote.html
@@ -83,7 +83,7 @@
     <h3 class="w3-left-align">Vorträge</h3>
 	<p class="w3-justify">Architektur ist durch Erzählungen anders erlebbar. Mit meiner Vortragstätigkeit möchte ich Menschen von Bauwerken erzählen und sie dafür begeistern.</p>
 	<p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. Ich bringe eine langjährige Vortragserfahrung mit und mir ist es wichtig den Vortrag an das jeweilige Publikum anzupassen. </p>
-	<img src="img/Südtirol.jpg" alt="Südtirol" style="width:100%">
+	<img src="img/Südtirol.jpg" alt="Südtirol" style="width:80%">
 </div>
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
 	
@@ -179,13 +179,13 @@
 
 </div>
 
-<!-- Historische Aufarbeitung -->
+<!-- Historische Forschung -->
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="historische">
     <!-- Banner -->
-	<img src="img/historische.jpg" alt="Strati" style="width:100%">
-		<h3 class="w3-left-align">Historische Aufarbeitung</h3>
-		<p class="w3-justify">Sie wollen mehr über die Geschichte eines Gebäudes erfahren oder das Gebäude (Kirche, Firmensitz, Wohnhaus...) einem breiteren Publikum vorstellen oder seine Geschichte für die Nachwelt festhalten?</p> 
-		<p class="w3-justify">Für meine Quellen suche ich neben dokumentarischem Material auch bewusst Gespräche mit Zeitzeugen. Aussagen - soweit möglich - werden geprüft und oft sind sie die entscheidenden Puzzlestücke, um ein Gebäude aufzuschlüsseln. Wie lebt es sich in dem Gebäude? Welche Probleme gab es? Wer waren die entscheidenden Akteure bei der Errichtung?
+	<img src="img/historische.jpg" alt="Strati" style="width:80%">
+		<h3 class="w3-left-align">Historische Forschung</h3>
+		<p class="w3-justify">Sie wollen mehr über die Geschichte eines Bauwerkes erfahren als Grundlage für eine Sanierung? Oder möchten Sie das Gebäude (Kirche, Firmensitz, Wohnhaus...) einem breiteren Publikum vorstellen? Oder seine Geschichte für die Nachwelt festhalten und damit für seine Erhaltung sorgen?</p> 
+		<p class="w3-justify">Für meine Quellen suche ich neben dokumentarischem Material auch bewusst Gespräche mit Zeitzeugen. Aussagen - soweit möglich - werden geprüft und oft sind sie die entscheidenden Puzzlestücke, um ein Gebäude aufzuschlüsseln. Wie lebt es sich in dem Gebäude? Welche Probleme gab und gibt es? Wer waren die entscheidenden Akteure bei der Errichtung?
 Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung hinaus noch oft nachhallen. Zuhören und die richtigen Nachfragen stellen sind dabei mein Handwerkszeug.</p> 
 
 
@@ -193,7 +193,7 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="nachlass">
     <!-- Banner -->
 	<img src="img/nachlass_banner.jpg" alt="Strati" style="width:100%">
-		<h3 class="w3-left-align">Nachlassbewertung</h3>
+		<h3 class="w3-left-align">Nachlass & Provinienz</h3>
 	 	<p class="w3-justify">Vor der Digitalisierung produzierte ein Architekturbüro unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht oft wertvolles historisches Material verloren. Daher biete ich archivische Bewertung und Beratung zum Umgang von Nachlässen im Zusammenhang mit Architektur.</p> 
 	 	<p class="w3-justify">Oft ist die nachfolgende Generation mit der Masse an Dokumenten überfordert oder braucht neue Lagerfläche. Nicht selten hängt dabei ein emotionaler Wert an dem Nachlass, dem sich die Nachfahren gegenüber verpflichtet fühlen. Sie wissen nicht wohin mit einem Nachlass aus der Baubranche? Sie wünschen Ihre Familiengeschichte aufzuarbeiten und für zukünftige Generationen zu sichern bzw. bekannter zu machen? Mit einem bewussten Umgang eines Nachlasses können Sie beispielsweise durch Übergabe an ein öffentliches Archiv auch Forschenden ermöglichen einen Teil unbekannter Architekturgeschichte zu entdecken.</p>
     	<p class="w3-justify">Bevor eine Nachlassbewertung stattfinden kann, sollten Sie sich über folgende Fragen Gedanken machen und im Idealfall erste Auskunft darüber geben können:</p>
@@ -271,6 +271,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
