--- a/angebote.html
+++ b/angebote.html
@@ -192,7 +192,7 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
 <!-- Nachlassbewertung -->
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="nachlass">
     <!-- Banner -->
-	<img src="img/nachlass_banner.jpg" alt="Strati" style="width:100%">
+	<img src="img/dias.jpg" alt="Strati" style="width:100%">
 		<h3 class="w3-left-align">Nachlass & Provinienz</h3>
 	 	<p class="w3-justify">Vor der Digitalisierung produzierte ein Architekturbüro unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht oft wertvolles historisches Material verloren. Daher biete ich archivische Bewertung und Beratung zum Umgang von Nachlässen im Zusammenhang mit Architektur.</p> 
 	 	<p class="w3-justify">Oft ist die nachfolgende Generation mit der Masse an Dokumenten überfordert oder braucht neue Lagerfläche. Nicht selten hängt dabei ein emotionaler Wert an dem Nachlass, dem sich die Nachfahren gegenüber verpflichtet fühlen. Sie wissen nicht wohin mit einem Nachlass aus der Baubranche? Sie wünschen Ihre Familiengeschichte aufzuarbeiten und für zukünftige Generationen zu sichern bzw. bekannter zu machen? Mit einem bewussten Umgang eines Nachlasses können Sie beispielsweise durch Übergabe an ein öffentliches Archiv auch Forschenden ermöglichen einen Teil unbekannter Architekturgeschichte zu entdecken.</p>
@@ -271,6 +271,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
